--- a/Chai.css
+++ b/Chai.css
@@ -2,13 +2,17 @@ body{
     background-image: url(images\ \(42\).jpeg);
     background-repeat: no-repeat;
     background-position: center;
-    color: pink;
+    color: yellow;
     background-color: black;
+    background-size: 500px;
 }
 .menu{
+    width: 80%;
     text-align: center;
-    margin-left: 230px;
-    margin-right: 230px;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 500px;
+
 }
 
 .flavor , .dessert{
@@ -25,7 +29,7 @@ body{
 }
 
 a{
-    color: aqua;
+    color: yellow;
 }
 
 hr{
